Fix layout issue
audio element has height of 54px in chrome

--- a/web-streaming-client/src/Replay.module.scss
+++ b/web-streaming-client/src/Replay.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 1fr 256px;
-  grid-template-rows: 1fr 50px;
+  grid-template-rows: 1fr 54px;
   min-height: 100vh;
 }
 
